--- a/package.json
+++ b/package.json
@@ -115,7 +115,7 @@
         "@ionic/cli-plugin-cordova": "1.4.0",
         "@ionic/cli-plugin-ionic-angular": "1.3.1",
         "@types/cordova": "0.0.34",
-        "@types/pouchdb": "6.1.0",
+        "@types/pouchdb": "^6.1.0",
         "node-sass": "^4.5.3",
         "typescript": "^2.4.0-dev.20170609"
     },
