--- a/package.json
+++ b/package.json
@@ -1,222 +1,216 @@
 {
-    "name": "onsitex",
-    "version": "0.0.14",
-    "author": {
-        "name": "Michael Bates",
-        "email": "hachero@gmail.com",
-        "url": "https://www.sesaonsite.com"
+  "name": "onsitex",
+  "version": "0.0.14",
+  "author": {
+    "name": "Michael Bates",
+    "email": "hachero@gmail.com",
+    "url": "https://www.sesaonsite.com"
+  },
+  "contributors": [
+    {
+      "name": "Michael Bates",
+      "email": "hachero@gmail.com",
+      "url": "https://www.sesaonsite.com"
     },
-    "contributors": [
-        {
-            "name": "Michael Bates",
-            "email": "hachero@gmail.com",
-            "url": "https://www.sesaonsite.com"
-        },
-        {
-            "name": "David Sargeant",
-            "email": "starmobiledevelopers@gmail.com",
-            "url": "https://www.starmobiledevelopers.com"
-        }
-    ],
-    "description": "OnSiteX: PouchDB Angular4 NodeJS Ionic3 CouchDB: a 'PANIC' Stack App",
-    "keywords": [
-        "SESA",
-        "SESA Fleet Services",
-        "SESA OnSite",
-        "OnSite",
-        "OnSiteX",
-        "sesaonsite.com",
-        "sesafleetservices.com",
-        "enterprise",
-        "technician",
-        "mechanic",
-        "Texas",
-        "PANIC",
-        "PANIC Stack",
-        "MEAN alternative",
-        "Alternative to MEAN",
-        "Alternative to MEAN Stack",
-        "MEAN sucks",
-        "Express.js sucks",
-        "Mike has strong opinions",
-        "PouchDB",
-        "Angular",
-        "Angular2",
-        "Angular4",
-        "Angular 2",
-        "Angular 4",
-        "Node",
-        "NodeJS",
-        "Node.js",
-        "Ionic",
-        "Ionic2",
-        "Ionic3",
-        "Ionic 2",
-        "Ionic 3",
-        "CouchDB",
-        "CouchDB 2.0"
-    ],
-    "config": {
-        "ionic_source_map": "source-map",
-        "ionic_bundler": "webpack",
-        "ionic_source_map_types": "#inline-source-map",
-        "ionic_copy": "./src/config/ionic-copy.config.js"
+    {
+      "name": "David Sargeant",
+      "email": "starmobiledevelopers@gmail.com",
+      "url": "https://www.starmobiledevelopers.com"
+    }
+  ],
+  "description": "OnSiteX: PouchDB Angular4 NodeJS Ionic3 CouchDB: a 'PANIC' Stack App",
+  "keywords": [
+    "SESA",
+    "SESA Fleet Services",
+    "SESA OnSite",
+    "OnSite",
+    "OnSiteX",
+    "sesaonsite.com",
+    "sesafleetservices.com",
+    "enterprise",
+    "technician",
+    "mechanic",
+    "Texas",
+    "PANIC",
+    "PANIC Stack",
+    "MEAN alternative",
+    "Alternative to MEAN",
+    "Alternative to MEAN Stack",
+    "MEAN sucks",
+    "Express.js sucks",
+    "Mike has strong opinions",
+    "PouchDB",
+    "Angular",
+    "Angular2",
+    "Angular4",
+    "Angular 2",
+    "Angular 4",
+    "Node",
+    "NodeJS",
+    "Node.js",
+    "Ionic",
+    "Ionic2",
+    "Ionic3",
+    "Ionic 2",
+    "Ionic 3",
+    "CouchDB",
+    "CouchDB 2.0"
+  ],
+  "config": {
+    "ionic_source_map": "source-map",
+    "ionic_bundler": "webpack",
+    "ionic_source_map_types": "#inline-source-map",
+    "ionic_copy": "./src/config/ionic-copy.config.js"
+  },
+  "homepage": "https://github.com/starmobiledevelopers/OnSiteX/",
+  "private": true,
+  "license": "UNLICENSED",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/starmobiledevelopers/OnSiteX.git"
+  },
+  "cordovaPlatforms": [
+    "browser",
+    "android",
+    "ios",
+    "desktop"
+  ],
+  "cordovaPlugins": [
+    "cordova-plugin-device",
+    "cordova-plugin-console",
+    "cordova-plugin-whitelist",
+    "cordova-plugin-splashscreen",
+    "cordova-plugin-statusbar",
+    "ionic-plugin-keyboard",
+    "cordova-plugin-network-information",
+    "cordova-plugin-secure-storage"
+  ],
+  "dependencies": {
+    "@agm/core": "^1.0.0-beta.0",
+    "@angular/animations": "^4.1.3",
+    "@angular/common": "4.1.3",
+    "@angular/compiler": "^4.1.3",
+    "@angular/compiler-cli": "^4.1.3",
+    "@angular/core": "^4.1.3",
+    "@angular/forms": "4.1.3",
+    "@angular/http": "4.1.3",
+    "@angular/platform-browser": "4.1.3",
+    "@angular/platform-browser-dynamic": "4.1.3",
+    "@angular/platform-server": "^4.1.3",
+    "@angular/tsc-wrapped": "^4.1.3",
+    "@ionic-native/app-version": "^3.12.1",
+    "@ionic-native/background-geolocation": "^3.12.1",
+    "@ionic-native/core": "3.12.1",
+    "@ionic-native/dialogs": "^3.12.1",
+    "@ionic-native/geofence": "^3.12.1",
+    "@ionic-native/local-notifications": "^3.12.1",
+    "@ionic-native/network": "^3.12.1",
+    "@ionic-native/phonegap-local-notification": "^3.12.1",
+    "@ionic-native/push": "^3.12.1",
+    "@ionic-native/secure-storage": "^3.12.1",
+    "@ionic-native/splash-screen": "^3.12.1",
+    "@ionic-native/status-bar": "3.12.1",
+    "@ionic-native/unique-device-id": "^3.12.1",
+    "@ionic/storage": "2.0.1",
+    "@ngx-translate/core": "^7.0.0",
+    "@ngx-translate/http-loader": "^0.1.0",
+    "@types/sprintf-js": "0.0.27",
+    "ajv": "^5.1.5",
+    "angular2-google-maps": "^0.17.0",
+    "async": "^2.4.1",
+    "cordova-android": "^6.2.3",
+    "cordova-android-play-services-gradle-release": "0.0.1",
+    "cordova-android-support-gradle-release": "~0.0.1",
+    "cordova-browser": "^4.1.0",
+    "cordova-ios": "^4.4.0",
+    "cordova-plugin-app-version": "^0.1.9",
+    "cordova-plugin-console": "^1.0.7",
+    "cordova-plugin-device": "^1.1.6",
+    "cordova-plugin-dialogs": "^1.3.3",
+    "cordova-plugin-mauron85-background-geolocation": "^2.2.5",
+    "cordova-plugin-network-information": "^1.3.3",
+    "cordova-plugin-secure-storage": "^2.6.8",
+    "cordova-plugin-spinner-dialog": "^1.3.1",
+    "cordova-plugin-splashscreen": "^4.0.3",
+    "cordova-plugin-sqlite-2": "^1.0.4",
+    "cordova-plugin-statusbar": "^2.2.3",
+    "cordova-plugin-uniquedeviceid": "^1.3.2",
+    "cordova-plugin-whitelist": "^1.3.2",
+    "cordova-windows": "^5.0.0",
+    "de.appplant.cordova.plugin.local-notification": "^0.8.5",
+    "desktop": "0.0.0",
+    "intl": "^1.2.5",
+    "ion-multi-picker": "^2.0.1",
+    "ionic-angular": "^3.3.0",
+    "ionic-plugin-keyboard": "^2.2.1",
+    "ionicons": "3.0.0",
+    "moment": "^2.18.1",
+    "moment-parseformat": "^2.2.0",
+    "moment-recur": "^1.0.5",
+    "moment-round": "^1.0.1",
+    "moment-timer": "^1.1.5",
+    "object-keys": "^1.0.11",
+    "pouchdb": "^6.2.0",
+    "pouchdb-all-dbs": "^1.0.2",
+    "pouchdb-authentication": "^0.5.5",
+    "pouchdb-collections": "^6.2.0",
+    "pouchdb-find": "^6.2.0",
+    "pouchdb-md5": "^6.2.0",
+    "pouchdb-seamless-auth": "^1.0.4",
+    "pouchdb-upsert": "^2.2.0",
+    "pouchdb-utils": "^6.2.0",
+    "reflect-metadata": "^0.1.10",
+    "rxjs": "^5.4.0",
+    "sprintf-js": "^1.1.1",
+    "sw-toolbox": "3.6.0",
+    "twix": "^1.2.0",
+    "uuid": "^3.0.1",
+    "zone.js": "^0.8.12"
+  },
+  "devDependencies": {
+    "@ionic/app-scripts": "^1.3.7",
+    "@ionic/cli-plugin-cordova": "1.4.0",
+    "@ionic/cli-plugin-ionic-angular": "1.3.1",
+    "@types/cordova": "0.0.34",
+    "@types/pouchdb": "6.1.0",
+    "node-sass": "^4.5.3",
+    "typescript": "^2.4.0-dev.20170609"
+  },
+  "scripts": {
+    "clean": "ionic-app-scripts clean",
+    "build": "ionic-app-scripts build",
+    "lint": "ionic-app-scripts lint",
+    "ionic:build": "ionic-app-scripts build --dev",
+    "ionic:serve": "ionic-app-scripts serve --dev"
+  },
+  "cordova": {
+    "plugins": {
+      "cordova-plugin-sqlite-2": {},
+      "cordova-plugin-secure-storage": {},
+      "cordova-plugin-console": {},
+      "cordova-plugin-device": {},
+      "cordova-plugin-splashscreen": {},
+      "cordova-plugin-statusbar": {},
+      "cordova-plugin-whitelist": {},
+      "ionic-plugin-keyboard": {},
+      "cordova-plugin-dialogs": {},
+      "cordova-plugin-spinner-dialog": {},
+      "cordova-plugin-network-information": {},
+      "cordova-plugin-mauron85-background-geolocation": {
+        "ACCOUNT_TYPE": "$PACKAGE_NAME.account",
+        "CONTENT_AUTHORITY": "$PACKAGE_NAME"
+      },
+      "de.appplant.cordova.plugin.local-notification": {},
+      "cordova-plugin-uniquedeviceid": {},
+      "cordova-android-support-gradle-release": {},
+      "cordova-plugin-app-version": {}
     },
-    "homepage": "https://github.com/starmobiledevelopers/OnSiteX/",
-    "private": true,
-    "license": "UNLICENSED",
-    "repository": {
-        "type": "git",
-        "url": "git+https://github.com/starmobiledevelopers/OnSiteX.git"
-    },
-    "cordovaPlatforms": [
-        "browser",
-        "android",
-        "ios",
-        "desktop"
-    ],
-    "cordovaPlugins": [
-        "cordova-plugin-device",
-        "cordova-plugin-console",
-        "cordova-plugin-whitelist",
-        "cordova-plugin-splashscreen",
-        "cordova-plugin-statusbar",
-        "ionic-plugin-keyboard",
-        "cordova-plugin-network-information",
-        "cordova-plugin-secure-storage"
-    ],
-    "dependencies": {
-        "@agm/core": "^1.0.0-beta.0",
-        "@angular/animations": "^4.1.3",
-        "@angular/common": "4.1.3",
-        "@angular/compiler": "^4.1.3",
-        "@angular/compiler-cli": "^4.1.3",
-        "@angular/core": "^4.1.3",
-        "@angular/forms": "4.1.3",
-        "@angular/http": "4.1.3",
-        "@angular/platform-browser": "4.1.3",
-        "@angular/platform-browser-dynamic": "4.1.3",
-        "@angular/platform-server": "^4.1.3",
-        "@angular/tsc-wrapped": "^4.1.3",
-        "@ionic-native/background-geolocation": "^3.12.1",
-        "@ionic-native/core": "3.12.1",
-        "@ionic-native/dialogs": "^3.12.1",
-        "@ionic-native/geofence": "^3.12.1",
-        "@ionic-native/local-notifications": "^3.12.1",
-        "@ionic-native/network": "^3.12.1",
-        "@ionic-native/phonegap-local-notification": "^3.12.1",
-        "@ionic-native/push": "^3.12.1",
-        "@ionic-native/secure-storage": "^3.12.1",
-        "@ionic-native/splash-screen": "^3.12.1",
-        "@ionic-native/status-bar": "3.12.1",
-        "@ionic-native/unique-device-id": "^3.12.1",
-        "@ionic/storage": "2.0.1",
-        "@ngx-translate/core": "^7.0.0",
-        "@ngx-translate/http-loader": "^0.1.0",
-        "@types/sprintf-js": "0.0.27",
-        "ajv": "^5.1.5",
-        "angular2-google-maps": "^0.17.0",
-        "async": "^2.4.1",
-        "cordova-android": "^6.2.3",
-        "cordova-android-play-services-gradle-release": "0.0.1",
-        "cordova-browser": "^4.1.0",
-        "cordova-ios": "^4.4.0",
-        "cordova-plugin-add-swift-support": "^1.6.2",
-        "cordova-plugin-compat": "^1.1.0",
-        "cordova-plugin-console": "^1.0.7",
-        "cordova-plugin-device": "^1.1.6",
-        "cordova-plugin-dialogs": "^1.3.3",
-        "cordova-plugin-geofence": "^0.7.0",
-        "cordova-plugin-mauron85-background-geolocation": "^2.2.5",
-        "cordova-plugin-network-information": "^1.3.3",
-        "cordova-plugin-secure-storage": "^2.6.8",
-        "cordova-plugin-spinner-dialog": "^1.3.1",
-        "cordova-plugin-splashscreen": "^4.0.3",
-        "cordova-plugin-sqlite-2": "^1.0.4",
-        "cordova-plugin-statusbar": "^2.2.3",
-        "cordova-plugin-uniquedeviceid": "^1.3.2",
-        "cordova-plugin-whitelist": "^1.3.2",
-        "cordova-windows": "^5.0.0",
-        "de.appplant.cordova.plugin.local-notification": "^0.8.5",
-        "desktop": "0.0.0",
-        "es6-promise-plugin": "^4.1.0",
-        "intl": "^1.2.5",
-        "ion-multi-picker": "^2.0.1",
-        "ionic-angular": "^3.3.0",
-        "ionic-plugin-keyboard": "^2.2.1",
-        "ionicons": "3.0.0",
-        "moment": "^2.18.1",
-        "moment-parseformat": "^2.2.0",
-        "moment-recur": "^1.0.5",
-        "moment-round": "^1.0.1",
-        "moment-timer": "^1.1.5",
-        "object-keys": "^1.0.11",
-        "phonegap-plugin-push": "^1.10.5",
-        "pouchdb": "^6.2.0",
-        "pouchdb-all-dbs": "^1.0.2",
-        "pouchdb-authentication": "^0.5.5",
-        "pouchdb-collections": "^6.2.0",
-        "pouchdb-find": "^6.2.0",
-        "pouchdb-md5": "^6.2.0",
-        "pouchdb-seamless-auth": "^1.0.4",
-        "pouchdb-upsert": "^2.2.0",
-        "pouchdb-utils": "^6.2.0",
-        "reflect-metadata": "^0.1.10",
-        "rxjs": "^5.4.0",
-        "sprintf-js": "^1.1.1",
-        "sw-toolbox": "3.6.0",
-        "twix": "^1.2.0",
-        "uuid": "^3.0.1",
-        "zone.js": "^0.8.12",
-        "cordova-android-support-gradle-release": "~0.0.1"
-    },
-    "devDependencies": {
-        "@ionic/app-scripts": "^1.3.7",
-        "@ionic/cli-plugin-cordova": "1.4.0",
-        "@ionic/cli-plugin-ionic-angular": "1.3.1",
-        "@types/cordova": "0.0.34",
-        "@types/pouchdb": "6.1.0",
-        "node-sass": "^4.5.3",
-        "typescript": "^2.4.0-dev.20170609"
-    },
-    "scripts": {
-        "clean": "ionic-app-scripts clean",
-        "build": "ionic-app-scripts build",
-        "lint": "ionic-app-scripts lint",
-        "ionic:build": "ionic-app-scripts build --dev",
-        "ionic:serve": "ionic-app-scripts serve --dev"
-    },
-    "cordova": {
-        "plugins": {
-            "cordova-plugin-sqlite-2": {},
-            "cordova-plugin-secure-storage": {},
-            "cordova-plugin-console": {},
-            "cordova-plugin-device": {},
-            "cordova-plugin-splashscreen": {},
-            "cordova-plugin-statusbar": {},
-            "cordova-plugin-whitelist": {},
-            "ionic-plugin-keyboard": {},
-            "cordova-plugin-dialogs": {},
-            "cordova-plugin-spinner-dialog": {},
-            "cordova-plugin-network-information": {},
-            "cordova-plugin-mauron85-background-geolocation": {
-                "ACCOUNT_TYPE": "$PACKAGE_NAME.account",
-                "CONTENT_AUTHORITY": "$PACKAGE_NAME"
-            },
-            "cordova-plugin-geofence": {},
-            "phonegap-plugin-push": {
-                "SENDER_ID": "915660787055"
-            },
-            "de.appplant.cordova.plugin.local-notification": {},
-            "cordova-plugin-uniquedeviceid": {},
-            "cordova-android-support-gradle-release": {}
-        },
-        "platforms": [
-            "android",
-            "browser",
-            "ios",
-            "windows"
-        ]
-    },
-    "false": {}
+    "platforms": [
+      "android",
+      "browser",
+      "ios",
+      "windows"
+    ]
+  },
+  "false": {}
 }
