--- a/package.json
+++ b/package.json
@@ -104,6 +104,7 @@
         "@ionic-native/dialogs": "^3.12.1",
         "@ionic-native/geofence": "^3.12.1",
         "@ionic-native/local-notifications": "^3.12.1",
+        "@ionic-native/native-audio": "^3.12.1",
         "@ionic-native/network": "^3.12.1",
         "@ionic-native/phonegap-local-notification": "^3.12.1",
         "@ionic-native/push": "^3.12.1",
@@ -128,6 +129,7 @@
         "cordova-plugin-device": "^1.1.6",
         "cordova-plugin-dialogs": "^1.3.3",
         "cordova-plugin-mauron85-background-geolocation": "^2.2.5",
+        "cordova-plugin-nativeaudio": "^3.0.9",
         "cordova-plugin-network-information": "^1.3.3",
         "cordova-plugin-secure-storage": "^2.6.8",
         "cordova-plugin-spinner-dialog": "^1.3.1",
@@ -210,7 +212,8 @@
             "cordova-plugin-app-version": {},
             "phonegap-plugin-push": {
                 "SENDER_ID": "915660787055"
-            }
+            },
+            "cordova-plugin-nativeaudio": {}
         },
         "platforms": [
             "android",
