--- a/package.json
+++ b/package.json
@@ -90,17 +90,20 @@
         "@angular/animations": "^4.2.4",
         "@angular/common": "^4.2.4",
         "@angular/compiler": "^4.2.4",
-        "@angular/compiler-cli": "^4.2.4",
+        "@angular/compiler-cli": "^4.2.5",
         "@angular/core": "^4.2.4",
         "@angular/forms": "^4.2.4",
-        "@angular/http": "^4.2.4",
+        "@angular/http": "^4.2.5",
         "@angular/platform-browser": "^4.2.4",
         "@angular/platform-browser-dynamic": "^4.2.4",
         "@angular/platform-server": "^4.2.4",
-        "@angular/tsc-wrapped": "^4.2.4",
+        "@angular/tsc-wrapped": "^4.2.5",
+        "@ionic-native/app-update": "^3.13.1",
         "@ionic-native/app-version": "^3.12.1",
         "@ionic-native/background-geolocation": "^3.12.1",
+        "@ionic-native/badge": "^3.13.1",
         "@ionic-native/core": "^3.12.1",
+        "@ionic-native/device": "^3.13.1",
         "@ionic-native/dialogs": "^3.12.1",
         "@ionic-native/geofence": "^3.12.1",
         "@ionic-native/local-notifications": "^3.12.1",
@@ -111,7 +114,7 @@
         "@ionic-native/secure-storage": "^3.12.1",
         "@ionic-native/splash-screen": "^3.12.1",
         "@ionic-native/status-bar": "3.12.1",
-        "@ionic-native/unique-device-id": "^3.12.1",
+        "@ionic-native/unique-device-id": "^3.13.1",
         "@ionic/storage": "^2.0.1",
         "@ngx-translate/core": "^7.0.0",
         "@ngx-translate/http-loader": "^0.1.0",
@@ -124,7 +127,10 @@
         "cordova-android-support-gradle-release": "^0.0.2",
         "cordova-browser": "^4.1.0",
         "cordova-ios": "^4.4.0",
+        "cordova-plugin-app-update": "^1.3.9",
         "cordova-plugin-app-version": "^0.1.9",
+        "cordova-plugin-appversion": "^1.0.0",
+        "cordova-plugin-badge": "^0.8.1",
         "cordova-plugin-console": "^1.0.7",
         "cordova-plugin-device": "^1.1.6",
         "cordova-plugin-dialogs": "^1.3.3",
@@ -167,6 +173,7 @@
         "rxjs": "^5.4.1",
         "sprintf-js": "^1.1.1",
         "sw-toolbox": "^3.6.0",
+        "transform-pouch": "^1.1.3",
         "twix": "^1.2.0",
         "uuid": "^3.1.0",
         "zone.js": "^0.8.12"
@@ -213,7 +220,9 @@
             "phonegap-plugin-push": {
                 "SENDER_ID": "915660787055"
             },
-            "cordova-plugin-nativeaudio": {}
+            "cordova-plugin-nativeaudio": {},
+            "cordova-plugin-app-update": {},
+            "cordova-plugin-badge": {}
         },
         "platforms": [
             "android",
