--- a/package.json
+++ b/package.json
@@ -102,6 +102,7 @@
         "@ionic-native/app-version": "^3.12.1",
         "@ionic-native/background-geolocation": "^3.12.1",
         "@ionic-native/badge": "^3.13.1",
+        "@ionic-native/camera": "^3.13.1",
         "@ionic-native/core": "^3.12.1",
         "@ionic-native/device": "^3.13.1",
         "@ionic-native/dialogs": "^3.12.1",
@@ -131,6 +132,8 @@
         "cordova-plugin-app-version": "^0.1.9",
         "cordova-plugin-appversion": "^1.0.0",
         "cordova-plugin-badge": "^0.8.1",
+        "cordova-plugin-camera": "^2.4.1",
+        "cordova-plugin-compat": "^1.1.0",
         "cordova-plugin-console": "^1.0.7",
         "cordova-plugin-device": "^1.1.6",
         "cordova-plugin-dialogs": "^1.3.3",
@@ -222,7 +225,9 @@
             },
             "cordova-plugin-nativeaudio": {},
             "cordova-plugin-app-update": {},
-            "cordova-plugin-badge": {}
+            "cordova-plugin-badge": {},
+            "cordova-plugin-compat": {},
+            "cordova-plugin-camera": {}
         },
         "platforms": [
             "android",
