--- a/package.json
+++ b/package.json
@@ -88,14 +88,14 @@
     "dependencies": {
         "@agm/core": "^1.0.0-beta.0",
         "@angular/animations": "^4.2.4",
-        "@angular/common": "^4.2.4",
-        "@angular/compiler": "^4.2.4",
+        "@angular/common": "^4.2.5",
+        "@angular/compiler": "^4.2.5",
         "@angular/compiler-cli": "^4.2.5",
-        "@angular/core": "^4.2.4",
-        "@angular/forms": "^4.2.4",
+        "@angular/core": "^4.2.5",
+        "@angular/forms": "^4.2.5",
         "@angular/http": "^4.2.5",
-        "@angular/platform-browser": "^4.2.4",
-        "@angular/platform-browser-dynamic": "^4.2.4",
+        "@angular/platform-browser": "^4.2.5",
+        "@angular/platform-browser-dynamic": "^4.2.5",
         "@angular/platform-server": "^4.2.4",
         "@angular/tsc-wrapped": "^4.2.5",
         "@ionic-native/app-update": "^3.13.1",
@@ -119,6 +119,7 @@
         "@ionic/storage": "^2.0.1",
         "@ngx-translate/core": "^7.0.0",
         "@ngx-translate/http-loader": "^0.1.0",
+        "@types/moment-round": "^1.0.0",
         "@types/sprintf-js": "^0.0.27",
         "ajv": "^5.2.0",
         "angular2-google-maps": "^0.17.0",
@@ -153,9 +154,11 @@
         "intl": "^1.2.5",
         "ion-multi-picker": "file:custom\\ion-multi-picker-2.0.4.tgz",
         "ionic": "^3.4.0",
-        "ionic-angular": "^3.4.2",
+        "ionic-angular": "^3.5.0",
         "ionic-plugin-keyboard": "^2.2.1",
         "ionicons": "3.0.0",
+        "localforage": "^1.5.0",
+        "localforage-cordovasqlitedriver": "^1.6.0",
         "moment": "^2.18.1",
         "moment-parseformat": "^2.2.0",
         "moment-recur": "^1.0.7",
@@ -173,7 +176,7 @@
         "pouchdb-upsert": "^2.2.0",
         "pouchdb-utils": "^6.2.0",
         "reflect-metadata": "^0.1.10",
-        "rxjs": "^5.4.1",
+        "rxjs": "^5.4.2",
         "sprintf-js": "^1.1.1",
         "sw-toolbox": "^3.6.0",
         "transform-pouch": "^1.1.3",
@@ -190,7 +193,7 @@
         "node-sass": "^4.5.3",
         "tslint": "^5.4.3",
         "tslint-eslint-rules": "^4.1.1",
-        "typescript": "^2.4.0"
+        "typescript": "^2.3.4"
     },
     "scripts": {
         "clean": "ionic-app-scripts clean",
@@ -227,7 +230,10 @@
             "cordova-plugin-app-update": {},
             "cordova-plugin-badge": {},
             "cordova-plugin-compat": {},
-            "cordova-plugin-camera": {}
+            "cordova-plugin-camera": {
+                "CAMERA_USAGE_DESCRIPTION": " ",
+                "PHOTOLIBRARY_USAGE_DESCRIPTION": " "
+            }
         },
         "platforms": [
             "android",
