--- a/package.json
+++ b/package.json
@@ -87,45 +87,45 @@
     ],
     "dependencies": {
         "@agm/core": "^1.0.0-beta.0",
-        "@angular/animations": "^4.2.4",
-        "@angular/common": "^4.2.5",
-        "@angular/compiler": "^4.2.5",
-        "@angular/compiler-cli": "^4.2.5",
-        "@angular/core": "^4.2.5",
-        "@angular/forms": "^4.2.5",
-        "@angular/http": "^4.2.5",
-        "@angular/platform-browser": "^4.2.5",
-        "@angular/platform-browser-dynamic": "^4.2.5",
-        "@angular/platform-server": "^4.2.4",
-        "@angular/tsc-wrapped": "^4.2.5",
-        "@ionic-native/app-update": "^3.13.1",
-        "@ionic-native/app-version": "^3.12.1",
-        "@ionic-native/background-geolocation": "^3.12.1",
-        "@ionic-native/badge": "^3.13.1",
-        "@ionic-native/camera": "^3.13.1",
-        "@ionic-native/core": "^3.12.1",
-        "@ionic-native/device": "^3.13.1",
-        "@ionic-native/dialogs": "^3.12.1",
-        "@ionic-native/geofence": "^3.12.1",
-        "@ionic-native/local-notifications": "^3.12.1",
-        "@ionic-native/native-audio": "^3.12.1",
-        "@ionic-native/network": "^3.12.1",
-        "@ionic-native/phonegap-local-notification": "^3.12.1",
-        "@ionic-native/push": "^3.12.1",
-        "@ionic-native/secure-storage": "^3.12.1",
-        "@ionic-native/splash-screen": "^3.12.1",
-        "@ionic-native/status-bar": "3.12.1",
-        "@ionic-native/unique-device-id": "^3.13.1",
+        "@angular/animations": "^4.2.6",
+        "@angular/common": "^4.2.6",
+        "@angular/compiler": "^4.2.6",
+        "@angular/compiler-cli": "^4.2.6",
+        "@angular/core": "^4.2.6",
+        "@angular/forms": "^4.2.6",
+        "@angular/http": "^4.2.6",
+        "@angular/platform-browser": "^4.2.6",
+        "@angular/platform-browser-dynamic": "^4.2.6",
+        "@angular/platform-server": "^4.2.6",
+        "@angular/tsc-wrapped": "^4.2.6",
+        "@ionic-native/app-update": "^4.0.0",
+        "@ionic-native/app-version": "^4.0.0",
+        "@ionic-native/background-geolocation": "^4.0.0",
+        "@ionic-native/badge": "^4.0.0",
+        "@ionic-native/camera": "^4.0.0",
+        "@ionic-native/core": "^4.0.0",
+        "@ionic-native/device": "^4.0.0",
+        "@ionic-native/dialogs": "^4.0.0",
+        "@ionic-native/geofence": "^4.0.0",
+        "@ionic-native/local-notifications": "^4.0.0",
+        "@ionic-native/native-audio": "^4.0.0",
+        "@ionic-native/network": "^4.0.0",
+        "@ionic-native/phonegap-local-notification": "^4.0.0",
+        "@ionic-native/push": "^4.0.0",
+        "@ionic-native/secure-storage": "^4.0.0",
+        "@ionic-native/splash-screen": "^4.0.0",
+        "@ionic-native/status-bar": "4.0.0",
+        "@ionic-native/unique-device-id": "^4.0.0",
         "@ionic/storage": "^2.0.1",
         "@ngx-translate/core": "^7.0.0",
         "@ngx-translate/http-loader": "^0.1.0",
         "@types/moment-round": "^1.0.0",
         "@types/sprintf-js": "^0.0.27",
-        "ajv": "^5.2.0",
+        "ajv": "^5.2.2",
         "angular2-google-maps": "^0.17.0",
-        "async": "^2.4.1",
+        "async": "^2.5.0",
         "cordova-android": "^6.2.3",
-        "cordova-android-play-services-gradle-release": "^0.0.1",
+        "cordova-android-play-services-gradle-release": "^0.0.2",
         "cordova-android-support-gradle-release": "^0.0.2",
         "cordova-browser": "^4.1.0",
         "cordova-ios": "^4.4.0",
@@ -153,7 +153,7 @@
         "desktop": "^0.0.0",
         "intl": "^1.2.5",
         "ion-multi-picker": "file:custom\\ion-multi-picker-2.0.4.tgz",
-        "ionic": "^3.4.0",
+        "ionic": "^3.5.0",
         "ionic-angular": "^3.5.0",
         "ionic-plugin-keyboard": "^2.2.1",
         "ionicons": "3.0.0",
@@ -185,13 +185,13 @@
         "zone.js": "^0.8.12"
     },
     "devDependencies": {
-        "@ionic/app-scripts": "^1.3.8",
-        "@ionic/cli-plugin-cordova": "^1.4.0",
-        "@ionic/cli-plugin-ionic-angular": "^1.3.1",
+        "@ionic/app-scripts": "^2.0.1",
+        "@ionic/cli-plugin-cordova": "1.4.1",
+        "@ionic/cli-plugin-ionic-angular": "1.3.2",
         "@types/cordova": "^0.0.34",
         "@types/pouchdb": "^6.1.1",
         "node-sass": "^4.5.3",
-        "tslint": "^5.4.3",
+        "tslint": "^5.5.0",
         "tslint-eslint-rules": "^4.1.1",
         "typescript": "^2.3.4"
     },
