--- a/package.json
+++ b/package.json
@@ -121,6 +121,7 @@
         "@ngx-translate/http-loader": "^0.1.0",
         "@types/moment-round": "^1.0.0",
         "@types/sprintf-js": "^0.0.27",
+        "@types/uuid": "^3.0.0",
         "ajv": "^5.2.2",
         "angular2-google-maps": "^0.17.0",
         "async": "^2.5.0",
