--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "onsitex",
-    "version": "10.11.05",
+    "version": "10.11.07",
     "author": {
         "name": "Michael Bates",
         "email": "hachero@gmail.com",
@@ -109,6 +109,7 @@
         "@ionic-native/geofence": "^4.0.0",
         "@ionic-native/local-notifications": "^4.0.0",
         "@ionic-native/native-audio": "^4.0.0",
+        "@ionic-native/native-storage": "^4.0.0",
         "@ionic-native/network": "^4.0.0",
         "@ionic-native/phonegap-local-notification": "^4.0.0",
         "@ionic-native/push": "^4.0.0",
@@ -141,6 +142,7 @@
         "cordova-plugin-dialogs": "^1.3.3",
         "cordova-plugin-mauron85-background-geolocation": "^2.2.5",
         "cordova-plugin-nativeaudio": "^3.0.9",
+        "cordova-plugin-nativestorage": "^2.2.2",
         "cordova-plugin-network-information": "^1.3.3",
         "cordova-plugin-secure-storage": "^2.6.8",
         "cordova-plugin-spinner-dialog": "^1.3.1",
@@ -234,7 +236,8 @@
             "cordova-plugin-camera": {
                 "CAMERA_USAGE_DESCRIPTION": " ",
                 "PHOTOLIBRARY_USAGE_DESCRIPTION": " "
-            }
+            },
+            "cordova-plugin-nativestorage": {}
         },
         "platforms": [
             "android",
