--- a/package.json
+++ b/package.json
@@ -120,6 +120,7 @@
         "@ionic/storage": "^2.0.1",
         "@ngx-translate/core": "^7.0.0",
         "@ngx-translate/http-loader": "^0.1.0",
+        "@typed/hashmap": "^1.0.1",
         "@types/moment-round": "^1.0.0",
         "@types/sprintf-js": "^0.0.27",
         "@types/uuid": "^3.0.0",
