--- a/package.json
+++ b/package.json
@@ -160,6 +160,7 @@
         "ionic-angular": "^3.6.0",
         "ionic-plugin-keyboard": "^2.2.1",
         "ionicons": "3.0.0",
+        "json8": "^0.9.2",
         "localforage": "^1.5.0",
         "localforage-cordovasqlitedriver": "^1.6.0",
         "moment": "^2.18.1",
