--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "onsitex",
-    "version": "10.11.20",
+    "version": "10.11.21",
     "author": {
         "name": "Michael Bates",
         "email": "hachero@gmail.com",
@@ -152,6 +152,7 @@
         "cordova-plugin-statusbar": "^2.2.3",
         "cordova-plugin-uniquedeviceid": "^1.3.2",
         "cordova-plugin-whitelist": "^1.3.2",
+        "cordova-sqlite-ext": "^0.10.5",
         "cordova-windows": "^5.0.0",
         "de.appplant.cordova.plugin.local-notification": "^0.8.5",
         "desktop": "^0.0.0",
@@ -192,7 +193,7 @@
     },
     "devDependencies": {
         "@ionic/app-scripts": "^2.0.1",
-        "@ionic/cli-plugin-cordova": "1.6.2",
+        "@ionic/cli-plugin-cordova": "^1.4.0",
         "@ionic/cli-plugin-ionic-angular": "1.4.1",
         "@ionic/cli-plugin-proxy": "^1.4.1",
         "@types/cordova": "^0.0.34",
