--- a/package.json
+++ b/package.json
@@ -130,7 +130,7 @@
     "cordova-android-support-gradle-release": "0.0.2",
     "cordova-browser": "^4.1.0",
     "cordova-ios": "^4.4.0",
-    "cordova-plugin-app-event": "file:node_modules/cordova-plugin-app-event",
+    "cordova-plugin-app-event": "^1.2.1",
     "cordova-plugin-app-update": "^1.3.9",
     "cordova-plugin-app-version": "^0.1.9",
     "cordova-plugin-appversion": "^1.0.0",
