--- a/package.json
+++ b/package.json
@@ -119,6 +119,7 @@
     "@ionic-native/splash-screen": "^4.0.0",
     "@ionic-native/status-bar": "4.0.0",
     "@ionic-native/unique-device-id": "^4.0.0",
+    "@ionic-native/vibration": "^4.5.3",
     "@ionic/storage": "^2.0.1",
     "@ngx-translate/core": "^7.0.0",
     "@ngx-translate/http-loader": "^0.1.0",
@@ -152,6 +153,7 @@
     "cordova-plugin-sqlite-2": "^1.0.4",
     "cordova-plugin-statusbar": "^2.2.3",
     "cordova-plugin-uniquedeviceid": "^1.3.2",
+    "cordova-plugin-vibration": "^3.0.1",
     "cordova-plugin-whitelist": "^1.3.2",
     "cordova-sqlite-ext": "^0.10.5",
     "de.appplant.cordova.plugin.local-notification": "^0.8.5",
@@ -251,7 +253,8 @@
         "ACCOUNT_TYPE": "$PACKAGE_NAME.account",
         "CONTENT_AUTHORITY": "$PACKAGE_NAME"
       },
-      "cordova-open-native-settings": {}
+      "cordova-open-native-settings": {},
+      "cordova-plugin-vibration": {}
     },
     "platforms": [
       "ios",
