--- a/package.json
+++ b/package.json
@@ -186,6 +186,7 @@
     "moment-round": "^1.0.1",
     "moment-shortformat": "^2.1.0",
     "moment-timer": "^1.1.5",
+    "moment-timezone": "^0.5.14",
     "object-keys": "^1.0.11",
     "phonegap-plugin-push": "^2.1.3",
     "pouchdb": "^6.4.3",
@@ -208,6 +209,7 @@
     "transform-pouch": "^1.1.3",
     "twix": "^1.2.0",
     "uuid": "^3.2.1",
+    "worker-pouch": "^2.1.0",
     "xlsx": "^0.11.18",
     "zone.js": "^0.8.12"
   },
