--- a/package.json
+++ b/package.json
@@ -106,13 +106,13 @@
     "@angular/platform-browser-dynamic": "^4.2.6",
     "@angular/platform-server": "^4.2.6",
     "@angular/tsc-wrapped": "^4.2.6",
-    "@ionic-native/app-update": "^4.0.0",
+    "@ionic-native/app-update": "^4.5.3",
     "@ionic-native/app-version": "^4.0.0",
     "@ionic-native/background-geolocation": "^4.4.2",
-    "@ionic-native/badge": "^4.0.0",
-    "@ionic-native/camera": "^4.0.0",
+    "@ionic-native/badge": "^4.5.3",
+    "@ionic-native/camera": "^4.5.3",
     "@ionic-native/core": "^4.4.2",
-    "@ionic-native/device": "^4.0.0",
+    "@ionic-native/device": "^4.5.3",
     "@ionic-native/dialogs": "^4.0.0",
     "@ionic-native/geofence": "^4.0.0",
     "@ionic-native/local-notifications": "^4.0.0",
@@ -125,7 +125,7 @@
     "@ionic-native/secure-storage": "^4.0.0",
     "@ionic-native/splash-screen": "^4.0.0",
     "@ionic-native/status-bar": "4.0.0",
-    "@ionic-native/unique-device-id": "^4.0.0",
+    "@ionic-native/unique-device-id": "^4.5.3",
     "@ionic-native/vibration": "^4.5.3",
     "@ionic/storage": "^2.0.1",
     "@ngx-translate/core": "^7.0.0",
@@ -138,20 +138,19 @@
     "chartjs-plugin-datalabels": "^0.2.0",
     "chartjs-plugin-stacked100": "^0.4.4",
     "cordova": "^8.0.0",
-    "cordova-android": "7.1.0",
     "cordova-android-support-gradle-release": "^1.2.0",
     "cordova-browser": "^5.0.3",
     "cordova-custom-config": "^5.0.2",
-    "cordova-ios": "^4.5.4",
     "cordova-open-native-settings": "^1.4.1",
     "cordova-plugin-app-event": "^1.2.1",
-    "cordova-plugin-app-update": "^1.3.9",
+    "cordova-plugin-app-update": "^1.5.2",
     "cordova-plugin-app-version": "^0.1.9",
     "cordova-plugin-appversion": "^1.0.0",
-    "cordova-plugin-badge": "^0.8.1",
+    "cordova-plugin-badge": "^0.8.7",
+    "cordova-plugin-camera": "^4.0.2",
     "cordova-plugin-compat": "^1.1.0",
     "cordova-plugin-console": "^1.0.7",
-    "cordova-plugin-device": "^1.1.6",
+    "cordova-plugin-device": "^1.1.7",
     "cordova-plugin-dialogs": "^1.3.3",
     "cordova-plugin-mauron85-background-geolocation": "^2.3.3",
     "cordova-plugin-nativeaudio": "^3.0.9",
@@ -160,12 +159,10 @@
     "cordova-plugin-secure-storage": "^2.6.8",
     "cordova-plugin-spinner-dialog": "^1.3.1",
     "cordova-plugin-splashscreen": "^4.0.3",
-    "cordova-plugin-sqlite-2": "^1.0.4",
     "cordova-plugin-statusbar": "^2.2.3",
     "cordova-plugin-uniquedeviceid": "^1.3.2",
     "cordova-plugin-vibration": "^3.0.1",
     "cordova-plugin-whitelist": "^1.3.2",
-    "cordova-sqlite-ext": "^0.10.5",
     "de.appplant.cordova.plugin.local-notification": "^0.8.5",
     "desktop": "^0.0.0",
     "file-saver": "^1.3.3",
@@ -269,12 +266,10 @@
       },
       "cordova-open-native-settings": {},
       "cordova-plugin-vibration": {},
-      "cordova-custom-config": {}
+      "cordova-custom-config": {},
+      "cordova-plugin-camera": {}
     },
-    "platforms": [
-      "ios",
-      "android"
-    ]
+    "platforms": []
   },
   "false": {}
 }
